--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^4.0.0"
+    "@stencil/core": "^4.0.0",
+    "@types/jquery": "^3.5.18",
+    "@types/select2": "^4.0.58"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
