--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@stencil/core": "^4.0.0",
     "@types/jquery": "^3.5.18",
     "@types/select2": "^4.0.58",
+    "@types/uuid": "^9.0.4",
     "bootstrap-switch": "^3.4.0",
     "jquery": "^3.7.1",
     "select2": "4.1.0-rc.0",
