--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jquery": "^3.5.18",
     "@types/select2": "^4.0.58",
     "@types/uuid": "^9.0.4",
+    "bootstrap": "^5.3.2",
     "bootstrap-switch": "^3.4.0",
     "icheck": "^1.0.2",
     "jquery": "^3.7.1",
